tests/baselines/reference/typeofImportDefer.errors.txt
b.ts(1,30): error TS1005: '(' expected.
b.ts(1,30): error TS1141: String literal expected.
b.ts(1,36): error TS1005: ')' expected.
b.ts(1,44): error TS2339: Property 'Foo' does not exist on type '"./a"'.


==== a.ts (0 errors) ====
    export interface Foo {
      x: number;
    }
    
==== b.ts (4 errors) ====
    export type X = typeof import.defer("./a").Foo;
                                 ~
!!! error TS1005: '(' expected.
                                 ~~~~~~
!!! error TS1141: String literal expected.
                                       ~
!!! error TS1005: ')' expected.
                                               ~~~
!!! error TS2339: Property 'Foo' does not exist on type '"./a"'.
    